--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
             "email": ""
         }
     ],
+    "repositories": [
+    {
+       "type": "git",
+       "url": "https://github.com/kato5/currency-converter.git"
+    }
     "minimum-stability": "dev",
     "require": {
         "php": "^5.5.9 || ^7.0"
